2011-11-08  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r99626.
        http://trac.webkit.org/changeset/99626
        https://bugs.webkit.org/show_bug.cgi?id=71866

        "C++ exceptions cannot be disabled without influencing the
        Objective-C exceptions" (Requested by benjaminp on #webkit).

        * DumpRenderTree/mac/Configurations/DumpRenderTree.xcconfig:

2011-11-08  Benjamin Poulain  <bpoulain@apple.com>

        [Mac] Disable C++ exceptions from DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=71834

        Reviewed by Darin Adler.

        DumpRenderTree Mac does not handle C++ exceptions. When such exception
        happens, it tends to cause the AutoReleasePool stack to be corrupted,
        which leads to crashes long after the exception was raised.

        This patch disabled C++ exceptions in order to catch the problems where
        they happen when a C++ exception is raised.

        * DumpRenderTree/mac/Configurations/DumpRenderTree.xcconfig:

2011-11-08  Julien Chaffraix  <jchaffraix@webkit.org>

        Moved myself to the reviewer list (yay!).

        * Scripts/webkitpy/common/config/committers.py:

2011-11-08  Zeno Albisser  <zeno@webkit.org>

        Added myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2011-11-08  Andy Wingo  <wingo@igalia.com>

        Skip some ECMAScript tests that fail on Linux in some time zones.
        https://bugs.webkit.org/show_bug.cgi?id=71371

        Reviewed by Martin Robinson.

        * Scripts/run-javascriptcore-tests: Skip some more tests.

2011-11-08  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed trivial fix after build system refactoring.

        * Scripts/run-qtwebkit-tests: Fix path of QtWebProcess for QML tests.

2011-11-08  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Don't set OBJECTS_DIR and DEFINES in default_pre
